[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "containervul"
version = "2.0.0"
description = "Enterprise Container Vulnerability Management Platform with Agentic AI and MCP"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
containervul-mcp = "containervul.mcp.server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
